# indictrans2-conv

./: README.md  indictrans2-finetune.ipynb  setup.sh  train_lora.py
dataset/: config.yaml  create_dataset.py  generate.py  translate.py
dataset/en-indic-exp/dev/eng_Latn-hin_Deva/: dev.eng_Latn  dev.hin_Deva
dataset/en-indic-exp/train/eng_Latn-hin_Deva/: train.eng_Latn  train.hin_Deva
dataset/src/: samples-translate.txt  samples.txt  topics.txt
indictranstools/: CHANGELOG.md  README.md  pyproject.toml  setup.py
indictranstools/IndicTransToolkit/: collator.py  evaluator.py  processor.c
