[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[project]
name = "indictranstoolkit"
version = "1.1.1"
description = "A simple, consistent, and extendable module for IndicTrans2 compatible with HF models"
readme = "README.md"
authors = [
    { name = "Varun Gumma", email = "varun230999@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cython",
    "sacremoses",
    "transformers",
    "sacrebleu",
    "indic-nlp-library-itt",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
